--- a/index.css
+++ b/index.css
@@ -161,4 +161,15 @@ body{
         font-size: 20px;
         margin-top: 0px;
     }
-}
+    .search input{
+        border: 0;
+        outline: 0;
+        background: #ebfffc;
+        color: #555;
+        padding: 10px 25px;
+        height: 60px;
+        border-radius: 30px;
+        flex: 1;
+        margin-right: 16px;
+        font-size: 15px;
+    }}
